[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
rand = "0.8"
axum = { version = "0.6.10", features = ["ws"] }
futures = "0.3.26"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tower-http = {version = "0.4.0", features = ["cors"]}
